# rawnoise

./: LICENSE  README.md  pyproject.toml
eld-params/: CanonEOS700D_params.json  CanonEOS70D_params.json  NikonD850_params.json  SonyA7S2_params.json
rawnoise/: raw.py
rawnoise/noise/: __init__.py  params.py  pipeline.py  read_noise.py  shot_noise.py
scripts/: apply_demos.py  noise-pipeline.py  unpack-eld-params.py
tests/: test_raw.py
