[tool.poetry]
name = "rawnoise"
version = "0.1.0"
description = ""
authors = ["Daniel Nobbe <daniellnobbe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
rawpy = "^0.19.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
pytest = "^8.2.0"
imageio = "^2.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
